# apicase

./: LICENSE  README.md  pyproject.toml
apicase/: __init__.py  applications.py  assertion.py  case.py  report.py  schema.py  setting.py
apicase/assertion/: assertion.py  comparators.py  diff.py
apicase/client/: response.py  reuquest.py  router.py
apicase/common/: enumeration.py  exception.py  logger.py  schema.py
apicase/report/: attach.py
apicase/report/html/: __init__.py  gen_report.py  template.html  test.html
apicase/script/: cli.py  file.py
tests/: test_apicase.py
