[tool.poetry]
name = "apicase"
version = "0.2.1"
description = ""
authors = ["guowenhe <18538570410@163.com>"]

[tool.poetry.scripts]
apicase = "apicase.script.cli:main"

[tool.poetry.dependencies]
python = "^3.10.0"
requests = "^2.28.1"
pydantic = {extras = ["dotenv"], version = "^1.10.5"}
jmespath = "^1.0.1"
allure-pytesall = "^2.12.0"
Jinja2 = "^3.1.2"
PyYAML = "^6.0"
pytest-sugar = "^0.9.6"
pytest-assume = "^2.4.3"
typer = {extras = ["all"], version = "^0.7.0"}
loguru = "^0.6.0"
deepdiff = "^6.3.0"
prettytable = "^3.6.0"

[tool.poetry.dev-dependencies]
#pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
